assignment1/target/BKOOLParser.py
# Generated from main/bkool/parser/BKOOL.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKOOLParser ( Parser ):

    grammarFileName = "BKOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "':='", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'boolean'", "'break'", "'class'", "'continue'", "'do'", 
                     "'else'", "'extends'", "'float'", "'if'", "'int'", 
                     "'new'", "'string'", "'then'", "'for'", "'return'", 
                     "'true'", "'false'", "'void'", "'nil'", "'this'", "'final'", 
                     "'static'", "'to'", "'downto'", "'+'", "'-'", "'*'", 
                     "'/'", "'\\'", "'%'", "'!='", "'=='", "'<'", "'>'", 
                     "'<='", "'>='", "'||'", "'&&'", "'!'", "'^'", "'['", 
                     "']'", "'{'", "'}'", "'('", "')'", "';'", "':'", "'.'", 
                     "','" ]

    symbolicNames = [ "<INVALID>", "ASM", "GAN", "BCOMMENT", "LCOMMENT", 
                      "INTLIT", "FLOATLIT", "BOOLIT", "STRINGLIT", "BOOLEAN", 
                      "BREAK", "CLASS", "CONTINUE", "DO", "ELSE", "EXTENDS", 
                      "FLOAT", "IF", "INT", "NEW", "STRING", "THEN", "FOR", 
                      "RETURN", "TRUE", "FALSE", "VOID", "NIL", "THIS", 
                      "FINAL", "STATIC", "TO", "DOWNTO", "ADD", "SUB", "MUL", 
                      "FDIV", "IDIV", "MOD", "NEQ", "EQ", "LESS", "GREATER", 
                      "LESSOE", "GREATEROE", "OR", "AND", "NOT", "CONCAT", 
                      "LSB", "RSB", "LCP", "RCP", "LB", "RB", "SMCOLON", 
                      "COLON", "DOT", "COMMA", "ID", "WS", "ERROR_CHAR", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_typ = 1
    RULE_classtype = 2
    RULE_classdecl = 3
    RULE_memberlist = 4
    RULE_nextmember = 5
    RULE_member = 6
    RULE_attributedecl = 7
    RULE_attnamelist = 8
    RULE_nextattributename = 9
    RULE_methoddecl = 10
    RULE_paralist = 11
    RULE_nextparadecl = 12
    RULE_paradecl = 13
    RULE_idlist = 14
    RULE_nextid = 15
    RULE_constructor = 16
    RULE_primitivetype = 17
    RULE_arraytype = 18
    RULE_exp = 19
    RULE_exp1 = 20
    RULE_exp2 = 21
    RULE_exp3 = 22
    RULE_exp4 = 23
    RULE_exp5 = 24
    RULE_exp6 = 25
    RULE_exp7 = 26
    RULE_exp8 = 27
    RULE_exp9 = 28
    RULE_exp10 = 29
    RULE_operand = 30
    RULE_index_op = 31
    RULE_explist = 32
    RULE_nextexp = 33
    RULE_blockstmt = 34
    RULE_vardecllist = 35
    RULE_nextvardec = 36
    RULE_stmtlist = 37
    RULE_nextstmt = 38
    RULE_vardec = 39
    RULE_stmt = 40
    RULE_asmstmt = 41
    RULE_ifstmt = 42
    RULE_forstmt = 43
    RULE_breakstmt = 44
    RULE_continuestmt = 45
    RULE_returnstmt = 46
    RULE_methodinvocstmt = 47
    RULE_arraylit = 48
    RULE_literals = 49
    RULE_nulliteral = 50

    ruleNames =  [ "program", "typ", "classtype", "classdecl", "memberlist", 
                   "nextmember", "member", "attributedecl", "attnamelist", 
                   "nextattributename", "methoddecl", "paralist", "nextparadecl", 
                   "paradecl", "idlist", "nextid", "constructor", "primitivetype", 
                   "arraytype", "exp", "exp1", "exp2", "exp3", "exp4", "exp5", 
                   "exp6", "exp7", "exp8", "exp9", "exp10", "operand", "index_op", 
                   "explist", "nextexp", "blockstmt", "vardecllist", "nextvardec", 
                   "stmtlist", "nextstmt", "vardec", "stmt", "asmstmt", 
                   "ifstmt", "forstmt", "breakstmt", "continuestmt", "returnstmt", 
                   "methodinvocstmt", "arraylit", "literals", "nulliteral" ]

    EOF = Token.EOF
    ASM=1
    GAN=2
    BCOMMENT=3
    LCOMMENT=4
    INTLIT=5
    FLOATLIT=6
    BOOLIT=7
    STRINGLIT=8
    BOOLEAN=9
    BREAK=10
    CLASS=11
    CONTINUE=12
    DO=13
    ELSE=14
    EXTENDS=15
    FLOAT=16
    IF=17
    INT=18
    NEW=19
    STRING=20
    THEN=21
    FOR=22
    RETURN=23
    TRUE=24
    FALSE=25
    VOID=26
    NIL=27
    THIS=28
    FINAL=29
    STATIC=30
    TO=31
    DOWNTO=32
    ADD=33
    SUB=34
    MUL=35
    FDIV=36
    IDIV=37
    MOD=38
    NEQ=39
    EQ=40
    LESS=41
    GREATER=42
    LESSOE=43
    GREATEROE=44
    OR=45
    AND=46
    NOT=47
    CONCAT=48
    LSB=49
    RSB=50
    LCP=51
    RCP=52
    LB=53
    RB=54
    SMCOLON=55
    COLON=56
    DOT=57
    COMMA=58
    ID=59
    WS=60
    ERROR_CHAR=61
    UNCLOSE_STRING=62
    ILLEGAL_ESCAPE=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKOOLParser.EOF, 0)

        def classdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.ClassdeclContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.ClassdeclContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 102
                self.classdecl()
                self.state = 105 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKOOLParser.CLASS):
                    break

            self.state = 107
            self.match(BKOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(BKOOLParser.INT, 0)

        def FLOAT(self):
            return self.getToken(BKOOLParser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(BKOOLParser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(BKOOLParser.STRING, 0)

        def arraytype(self):
            return self.getTypedRuleContext(BKOOLParser.ArraytypeContext,0)


        def classtype(self):
            return self.getTypedRuleContext(BKOOLParser.ClasstypeContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_typ

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTyp" ):
                return visitor.visitTyp(self)
            else:
                return visitor.visitChildren(self)




    def typ(self):

        localctx = BKOOLParser.TypContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_typ)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 109
                self.match(BKOOLParser.INT)
                pass

            elif la_ == 2:
                self.state = 110
                self.match(BKOOLParser.FLOAT)
                pass

            elif la_ == 3:
                self.state = 111
                self.match(BKOOLParser.BOOLEAN)
                pass

            elif la_ == 4:
                self.state = 112
                self.match(BKOOLParser.STRING)
                pass

            elif la_ == 5:
                self.state = 113
                self.arraytype()
                pass

            elif la_ == 6:
                self.state = 114
                self.classtype()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClasstypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_classtype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClasstype" ):
                return visitor.visitClasstype(self)
            else:
                return visitor.visitChildren(self)




    def classtype(self):

        localctx = BKOOLParser.ClasstypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classtype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(BKOOLParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(BKOOLParser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.ID)
            else:
                return self.getToken(BKOOLParser.ID, i)

        def LCP(self):
            return self.getToken(BKOOLParser.LCP, 0)

        def memberlist(self):
            return self.getTypedRuleContext(BKOOLParser.MemberlistContext,0)


        def RCP(self):
            return self.getToken(BKOOLParser.RCP, 0)

        def EXTENDS(self):
            return self.getToken(BKOOLParser.EXTENDS, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_classdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassdecl" ):
                return visitor.visitClassdecl(self)
            else:
                return visitor.visitChildren(self)




    def classdecl(self):

        localctx = BKOOLParser.ClassdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_classdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(BKOOLParser.CLASS)
            self.state = 120
            self.match(BKOOLParser.ID)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.EXTENDS:
                self.state = 121
                self.match(BKOOLParser.EXTENDS)
                self.state = 122
                self.match(BKOOLParser.ID)


            self.state = 125
            self.match(BKOOLParser.LCP)
            self.state = 126
            self.memberlist()
            self.state = 127
            self.match(BKOOLParser.RCP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member(self):
            return self.getTypedRuleContext(BKOOLParser.MemberContext,0)


        def nextmember(self):
            return self.getTypedRuleContext(BKOOLParser.NextmemberContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_memberlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMemberlist" ):
                return visitor.visitMemberlist(self)
            else:
                return visitor.visitChildren(self)




    def memberlist(self):

        localctx = BKOOLParser.MemberlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_memberlist)
        try:
            self.state = 133
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.BOOLEAN, BKOOLParser.FLOAT, BKOOLParser.INT, BKOOLParser.STRING, BKOOLParser.VOID, BKOOLParser.FINAL, BKOOLParser.STATIC, BKOOLParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.member()
                self.state = 130
                self.nextmember()
                pass
            elif token in [BKOOLParser.RCP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NextmemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member(self):
            return self.getTypedRuleContext(BKOOLParser.MemberContext,0)


        def nextmember(self):
            return self.getTypedRuleContext(BKOOLParser.NextmemberContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_nextmember

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNextmember" ):
                return visitor.visitNextmember(self)
            else:
                return visitor.visitChildren(self)




    def nextmember(self):

        localctx = BKOOLParser.NextmemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_nextmember)
        try:
            self.state = 139
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.BOOLEAN, BKOOLParser.FLOAT, BKOOLParser.INT, BKOOLParser.STRING, BKOOLParser.VOID, BKOOLParser.FINAL, BKOOLParser.STATIC, BKOOLParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.member()
                self.state = 136
                self.nextmember()
                pass
            elif token in [BKOOLParser.RCP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methoddecl(self):
            return self.getTypedRuleContext(BKOOLParser.MethoddeclContext,0)


        def attributedecl(self):
            return self.getTypedRuleContext(BKOOLParser.AttributedeclContext,0)


        def constructor(self):
            return self.getTypedRuleContext(BKOOLParser.ConstructorContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_member

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMember" ):
                return visitor.visitMember(self)
            else:
                return visitor.visitChildren(self)




    def member(self):

        localctx = BKOOLParser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_member)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 141
                self.methoddecl()
                pass

            elif la_ == 2:
                self.state = 142
                self.attributedecl()
                pass

            elif la_ == 3:
                self.state = 143
                self.constructor()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributedeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typ(self):
            return self.getTypedRuleContext(BKOOLParser.TypContext,0)


        def attnamelist(self):
            return self.getTypedRuleContext(BKOOLParser.AttnamelistContext,0)


        def SMCOLON(self):
            return self.getToken(BKOOLParser.SMCOLON, 0)

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def FINAL(self):
            return self.getToken(BKOOLParser.FINAL, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_attributedecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttributedecl" ):
                return visitor.visitAttributedecl(self)
            else:
                return visitor.visitChildren(self)




    def attributedecl(self):

        localctx = BKOOLParser.AttributedeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_attributedecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKOOLParser.STATIC:
                    self.state = 146
                    self.match(BKOOLParser.STATIC)


                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKOOLParser.FINAL:
                    self.state = 149
                    self.match(BKOOLParser.FINAL)


                pass

            elif la_ == 2:
                self.state = 153
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKOOLParser.FINAL:
                    self.state = 152
                    self.match(BKOOLParser.FINAL)


                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKOOLParser.STATIC:
                    self.state = 155
                    self.match(BKOOLParser.STATIC)


                pass


            self.state = 160
            self.typ()
            self.state = 161
            self.attnamelist()
            self.state = 162
            self.match(BKOOLParser.SMCOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttnamelistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def nextattributename(self):
            return self.getTypedRuleContext(BKOOLParser.NextattributenameContext,0)


        def ASM(self):
            return self.getToken(BKOOLParser.ASM, 0)

        def exp(self):
            return self.getTypedRuleContext(BKOOLParser.ExpContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_attnamelist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttnamelist" ):
                return visitor.visitAttnamelist(self)
            else:
                return visitor.visitChildren(self)




    def attnamelist(self):

        localctx = BKOOLParser.AttnamelistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_attnamelist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(BKOOLParser.ID)
            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.ASM:
                self.state = 165
                self.match(BKOOLParser.ASM)
                self.state = 166
                self.exp()


            self.state = 169
            self.nextattributename()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NextattributenameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def nextattributename(self):
            return self.getTypedRuleContext(BKOOLParser.NextattributenameContext,0)


        def ASM(self):
            return self.getToken(BKOOLParser.ASM, 0)

        def exp(self):
            return self.getTypedRuleContext(BKOOLParser.ExpContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_nextattributename

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNextattributename" ):
                return visitor.visitNextattributename(self)
            else:
                return visitor.visitChildren(self)




    def nextattributename(self):

        localctx = BKOOLParser.NextattributenameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_nextattributename)
        self._la = 0 # Token type
        try:
            self.state = 179
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 171
                self.match(BKOOLParser.COMMA)
                self.state = 172
                self.match(BKOOLParser.ID)
                self.state = 175
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKOOLParser.ASM:
                    self.state = 173
                    self.match(BKOOLParser.ASM)
                    self.state = 174
                    self.exp()


                self.state = 177
                self.nextattributename()
                pass
            elif token in [BKOOLParser.SMCOLON]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethoddeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitivetype(self):
            return self.getTypedRuleContext(BKOOLParser.PrimitivetypeContext,0)


        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def LB(self):
            return self.getToken(BKOOLParser.LB, 0)

        def paralist(self):
            return self.getTypedRuleContext(BKOOLParser.ParalistContext,0)


        def RB(self):
            return self.getToken(BKOOLParser.RB, 0)

        def blockstmt(self):
            return self.getTypedRuleContext(BKOOLParser.BlockstmtContext,0)


        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_methoddecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethoddecl" ):
                return visitor.visitMethoddecl(self)
            else:
                return visitor.visitChildren(self)




    def methoddecl(self):

        localctx = BKOOLParser.MethoddeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_methoddecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.STATIC:
                self.state = 181
                self.match(BKOOLParser.STATIC)


            self.state = 184
            self.primitivetype()
            self.state = 185
            self.match(BKOOLParser.ID)
            self.state = 186
            self.match(BKOOLParser.LB)
            self.state = 187
            self.paralist()
            self.state = 188
            self.match(BKOOLParser.RB)
            self.state = 189
            self.blockstmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParalistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paradecl(self):
            return self.getTypedRuleContext(BKOOLParser.ParadeclContext,0)

